crates/baml-bridge-derive/tests/ui/nested_fn_forbidden.stderr
error: expected identifier, found keyword `fn`
 --> tests/ui/nested_fn_forbidden.rs:7:14
  |
7 |     #[render(fn = render_it)]
  |              ^^
